<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FCF0E3"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/backgroundView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:scaleType="centerCrop"
        android:src="@drawable/background"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView

                android:id="@+id/title_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="15dp"
                android:gravity="center"
                android:text="@string/are_you_a_productive_person"
                android:textColor="@color/textColor"
                android:textSize="30sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/question_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:adjustViewBounds="true"
                android:src="@drawable/boy4" />

            <TextView
                android:id="@+id/question_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="70dp"
                android:layout_marginRight="15dp"
                android:gravity="center"
                android:text="@string/then_this_is_the_quiz_for_you"
                android:textColor="@color/textColor"
                android:textSize="30sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editText_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:hint="@string/enter_your_answer_here"
                android:visibility="gone" />

            <RadioGroup
                android:id="@+id/should_you_multitask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:visibility="gone">

                <RadioButton
                    android:id="@+id/yeah"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Yeah"
                    android:textColor="@color/textColor"
                    android:textSize="30sp" />

                <RadioButton
                    android:id="@+id/no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nah_it_s_not_a_good_idea"
                    android:textColor="@color/textColor"
                    android:textSize="30sp" />
            </RadioGroup>

            <CheckBox
                android:id="@+id/checkbox1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/by_the_level_of_importance"
                android:textColor="@color/textColor"
                android:textSize="30sp"
                android:visibility="gone" />

            <CheckBox
                android:id="@+id/checkbox2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/by_the_name_of_the_tasks"
                android:textColor="@color/textColor"
                android:textSize="30sp"
                android:visibility="gone" />

            <CheckBox
                android:id="@+id/checkbox3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/by_the_order_of_tasks"
                android:textColor="@color/textColor"
                android:textSize="30sp"
                android:visibility="gone" />

            <CheckBox
                android:id="@+id/checkbox4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/by_the_period_of_time_it_need_to_be_done"
                android:textColor="@color/textColor"
                android:textSize="30sp"
                android:visibility="gone" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/SubmitButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_shap"
                    android:onClick="Submit"
                    android:text="@string/lets_see"
                    android:textColor="@color/textColor"
                    android:textSize="20sp"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/nextButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_shap"
                    android:onClick="nextQuestion"
                    android:text="@string/lets_see"
                    android:textColor="@color/textColor"
                    android:textSize="20sp"
                    android:visibility="gone" />
            </LinearLayout>

            <Button
                android:id="@+id/LetsSeeButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="90dp"
                android:layout_marginRight="80dp"
                android:layout_marginBottom="50dp"
                android:background="@drawable/button_shap"
                android:onClick="letsSee"
                android:text="@string/lets_see"
                android:textColor="@color/textColor"
                android:textSize="20sp" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>